--- a/great-idea/index.html
+++ b/great-idea/index.html
@@ -19,16 +19,14 @@
     <!-- Copy and paste your HTML from the first UI project here -->
 
     <header>
-      <nav>
+      <nav class="serviceNAV">
         <a href="services.html">Services</a>
         <a href="#">Product</a>
-        <a href="#">Vision</a>
+        <a href="vision.html">Vision</a>
         <a href="#">Features</a>
         <a href="#">About</a>
         <a href="#">Contact</a>
-        <!-- <div class="img1"> -->
-        <img class="logo" src="img/logo.png" alt="Great Idea! Company logo." />
-        <!-- </div> -->
+        <a href="index.html"><img class="logo" src="img/logo.png" alt="Great Idea! Company logo."/></a>
       </nav>
     </header>
     <section class="top">
