--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -56,7 +56,7 @@
           iaculis.
         </p>
 
-        <button class="serviceBUTTON">Learn More</button>
+        <button class="serviceBUTTON" type="button">Learn More</button>
       </div>
       <div class="grayBOX">
         <h4>UX / UI</h4>
@@ -69,7 +69,7 @@
           iaculis.
         </p>
 
-        <button class="serviceBUTTON">Learn More</button>
+        <button class="serviceBUTTON" type="button">Learn More</button>
       </div>
       <div class="grayBOX">
         <h4>Digital Marketing</h4>
@@ -82,7 +82,7 @@
           iaculis.
         </p>
 
-        <button class="serviceBUTTON">Learn More</button>
+        <button class="serviceBUTTON" type="button">Learn More</button>
       </div>
       <div class="grayBOX">
         <h4>Web Development</h4>
@@ -94,7 +94,7 @@
           neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis
           iaculis.
         </p>
-        <button class="serviceBUTTON">Learn More</button>
+        <button class="serviceBUTTON" type="button">Learn More</button>
       </div>
       <div class="grayBOX">
         <h4>iOS Development</h4>
@@ -107,7 +107,7 @@
           iaculis.
         </p>
 
-        <button class="serviceBUTTON">Learn More</button>
+        <button class="serviceBUTTON" type="button">Learn More</button>
       </div>
       <div class="grayBOX">
         <h4>Android Development</h4>
@@ -120,7 +120,7 @@
           iaculis.
         </p>
 
-        <button class="serviceBUTTON">Learn More</button>
+        <button class="serviceBUTTON" type="button">Learn More</button>
       </div>
     </section>
     <hr>
